[gd_scene load_steps=22 format=2]

[ext_resource path="res://Spider.gd" type="Script" id=1]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_walk/spiderwalksprite_08.png" type="Texture" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_walk/spiderwalksprite_04.png" type="Texture" id=3]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_walk/spiderwalksprite_06.png" type="Texture" id=4]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_walk/spiderwalksprite_02.png" type="Texture" id=5]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_maul/spidermaulsprite_4.png" type="Texture" id=6]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_maul/spidermaulsprite_2.png" type="Texture" id=7]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_walk/spiderwalksprite_01.png" type="Texture" id=8]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_walk/spiderwalksprite_07.png" type="Texture" id=9]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_walk/spiderwalksprite_00.png" type="Texture" id=10]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_walk/spiderwalksprite_03.png" type="Texture" id=11]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_walk/spiderwalksprite_05.png" type="Texture" id=12]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_walk/spiderwalksprite_09.png" type="Texture" id=13]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_maul/spidermaulsprite_3.png" type="Texture" id=14]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_maul/spidermaulsprite_5.png" type="Texture" id=15]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_maul/spidermaulsprite_1.png" type="Texture" id=16]
[ext_resource path="res://Placeholder Textures for Shards of the Past/spider_maul/spidermaulsprite_0.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 12 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 16 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 15 ) ],
"loop": true,
"name": "maul",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 9 )

[sub_resource type="CircleShape2D" id=3]
radius = 120.004

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[node name="Spider" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
frames = SubResource( 1 )
animation = "maul"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.75

[node name="Area2D - Hurt Area" type="Area2D" parent="."]
visible = false
position = Vector2( 12, 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D - Hurt Area"]
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 14, 10 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="Timer4" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.4

[node name="RayCast2D_2" type="RayCast2D" parent="."]
position = Vector2( -14, 10 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 14, -7 )
enabled = true
cast_to = Vector2( 15, 0 )
collision_mask = 524288

[node name="RayCast2D2_2" type="RayCast2D" parent="."]
position = Vector2( -14, -7 )
enabled = true
cast_to = Vector2( -15, 0 )
collision_mask = 524288
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Area2D - Hurt Area" to="." method="_on_Area2D__Hurt_Area_body_entered"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
